# beefast_message_parser

./: .gitignore
src/beefast_interfaces/: CMakeLists.txt  ReadMe.md  package.xml
src/beefast_interfaces/action/: Explore.action
src/beefast_interfaces/msg/: AlongEdges.msg  Motion.msg  MotionWithCollision.msg  TroubleGetout.msg
src/beefast_interfaces/srv/: GetDatabase.srv  ManageState.srv
src/beefast_message_parser/: CMakeLists.txt
src/beefast_message_parser/.svn/: wc.db
src/beefast_message_parser/include/beefast_message_parser/: message_processor.hpp
src/beefast_message_parser/src/: main.cpp  message_processor.cpp  odom.cpp
src/beefast_utils/: CMakeLists.txt  package.xml
src/beefast_utils/include/beefast_utils/: lifecycle_node.hpp  lifecycle_service_client.hpp  node_thread.hpp  node_utils.hpp  server_node.hpp  service_client.hpp  service_node.hpp  string_utils.hpp
src/beefast_utils/src/: lifecycle_node.cpp  lifecycle_service_client.cpp  node_thread.cpp  node_utils.cpp  service_node.cpp  string_utils.cpp
